--- a/angular/src/app/header/header.component.html
+++ b/angular/src/app/header/header.component.html
@@ -7,10 +7,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" routerLink ="/home" style="color: white; margin-left: 20px; font-size: 15px;">Home<span class="sr-only">(current)</span></a>
-        <a class="nav-link" routerLink ="/myprofile" style="color: white; margin-left: 20px; font-size: 15px;">My Profile</a>
-        <a class="nav-link" routerLink ="/favorite" style="color: white; margin-left: 20px; font-size: 15px;">Favorite</a>
-        <a class="nav-link" routerLink ="/" tabindex="-1" aria-disabled="true" id="signout" click=" logout()">Sign out</a>
+        <a class="nav-link active"  style="color: white; margin-left: 20px; font-size: 15px;" (click)="redirect('home')">Home<span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLink ="/myprofile" style="color: white; margin-left: 20px; font-size: 15px;" (click)="redirect('myprofile')">My Profile</a>
+        <a class="nav-link" routerLink ="/favorite" style="color: white; margin-left: 20px; font-size: 15px;" (click)="redirect('favorite')">Favorite</a>
+        <a class="nav-link" routerLink ="/" tabindex="-1" aria-disabled="true" id="signout" (click)=" logout()" (click)="redirect('')">Sign out</a>
       </div>
     </div>
   </nav>
