--- a/angular/src/app/header/header.component.html
+++ b/angular/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-fixed-top  navbar-expand-sm navbar-light nav">
-  <img src='../../assets/images/logo.jpeg' style="width: 50px; height:50px">
+ <a routerLink ="/"><img src='../../assets/images/logo.jpeg' style="width: 50px; height:50px"></a> 
     <a class="navbar-brand" href="#" style="color: white;">Newsy</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
